--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "ng serve --configuration=production"
   },
   "dependencies": {
-    "rxjs": "^7.8.2",
-    "@angular/compiler": "^21.1.0",
-    "@angular/platform-browser": "^21.1.0",
-    "@angular/common": "^21.1.0",
-    "@google/genai": "^1.39.0",
-    "@angular/core": "^21.1.0",
-    "@angular/forms": "^21.1.2",
-    "jszip": "3.10.1",
-    "file-saver": "2.0.5",
     "@angular/build": "^21.1.0",
     "@angular/cli": "^21.1.0",
+    "@angular/common": "^21.1.0",
+    "@angular/compiler": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
+    "@angular/core": "^21.1.0",
+    "@angular/forms": "^21.1.2",
+    "@angular/platform-browser": "^21.1.0",
+    "@google/genai": "^1.39.0",
+    "dotenv": "^17.2.3",
+    "file-saver": "2.0.5",
+    "jszip": "3.10.1",
+    "rxjs": "^7.8.2",
     "tailwindcss": "latest"
   },
   "devDependencies": {
